@@ -173,11 +173,13 @@ struct _Module
 	ModuleChild *children;
 	ModuleObject *objects;
 	ModuleInfo modinfo; /* Used to store handle info for module */
-	unsigned permanent:1; /* permanent module? (can't unload/reload) */
+	unsigned char options;
 };
 /*
  * Symbol table
 */
+
+#define MOD_OPT_PERM 0x0001
 
 struct _mod_symboltable
 {
